2001-12-01  Neil Jerram  <neil@ossau.uklinux.net>

	* gh_data.c (gh_module_lookup): Use scm_str2symbol rather than
	gh_symbol2scm.

2001-11-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.h (SCM_GC_CELL_WORD, SCM_GC_CELL_OBJECT,
	SCM_GC_SET_CELL_WORD, SCM_GC_SET_CELL_OBJECT):  New macros.

	(SCM_GC_CELL_TYPE, SCM_CELL_WORD, SCM_CELL_OBJECT,
	SCM_SET_CELL_WORD, SCM_SET_CELL_OBJECT, SCM_FREE_CELL_CDR,
	SCM_GC_SET_CELL_OBJECT):  Express in terms of SCM_GC_CELL_*
	macros.

	(SCM_FREE_CELL_P):  Express in terms of SCM_GC_CELL_TYPE.

	* inline.h (scm_alloc_cell, scm_alloc_double_cell):  Use
	SCM_GC_CELL_* macros when accessing free cells.

2001-11-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* vectors.h (SCM_MAKE_VECTOR_TAG): New.
	* unif.h (SCM_MAKE_BITVECTOR_TAG, SCM_MAKE_UVECTOR_TAG): New. 
	* symbols.h (SCM_MAKE_SYMBOL_TAG): New.
	* strings.h (SCM_MAKE_STRING_TAG): New.
	* procs.h (SCM_MAKE_CCLO_TAG): New.
	* numbers.h (SCM_MAKE_BIGNUM_TAG): New.

	* goops.h: Replaced SCM_DEBUG_DEPRECATED with
	!SCM_ENABLE_DEPRECATED.

	* async.c, async.h (scm_system_async_mark_from_signal_handler):
	New.

	* scmsigs.c (scm_take_signal): Removed all code that assumes that
	signal handlers are allowed to divert the flow of control.  Call
	scm_system_async_mark_from_signal_handler instead of
	scm_system_async_mark.


	Deprecated SCM_NEWCELL and SCM_NEWCELL2.  Added scm_alloc_cell and
	scm_alloc_double_cell in their place.
	
	* gc.h (SCM_GC_SET_ALLOCATED, scm_debug_newcell,
	scm_debug_newcell2, scm_tc16_allocated): Removed from header.
	(scm_deprecated_newcell, scm_deprecated_newcell2): New.
	(SCM_NEWCELL, SCM_NEWCELL2): Implement in terms of
	scm_deprecated_newcell and scm_deprecated_newcell2.

	gc.c (scm_tc16_allocated): Only define when including deprecated
	features.
	(scm_debug_newcell, scm_debug_newcell2): Removed.
	(scm_init_storage): Do not initialize scm_tc16_allocated.
	(scm_init_gc): Do it here.
	(allocated_mark): New, from old code.